avoided flickering behaviour by adding loading state to the useContext

--- a/src/styles/navigation.sass
+++ b/src/styles/navigation.sass
@@ -6,3 +6,5 @@
     padding-left: 1rem
     .nav-about, .nav-travels
       padding-left: 1rem
+    .nav-signout
+      cursor: pointer
